[package]
name = "osos"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-display", "gtk,show-tabs=on", "-drive", "format=raw,file={}"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (success is 0x10): (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

# [profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
linked_list_allocator = "0.10.5"
log = "0.4.22"
pc-keyboard = "0.8"
pic8259 = "0.11"
spin = "0.9"
uart_16550 = "0.3"
volatile = "0.2"
x86_64 = "0.15.2"
